--- a/style.css
+++ b/style.css
@@ -135,5 +135,34 @@ body{
 @media (max-width: 480px){
     .name{ font-size: 23px; }
     .btn{ padding: 10px; font-size: 14px; }
+}.btn:hover{
+    background: #00eaff;
+    color: #000;
+    box-shadow: 0 0 15px #00eaff;
+}
+
+/* ABOUT */
+.about{
+    margin-top: 35px;
+    padding: 20px;
+    background: #111;
+    border-left: 4px solid #00eaff;
+    border-radius: 10px;
+}
+
+.about h2{
+    margin-bottom: 10px;
+    font-size: 22px;
+}
+
+.about p{
+    line-height: 1.6;
+    color: #ddd;
+}
+
+/* RESPONSIVE */
+@media (max-width: 480px){
+    .name{ font-size: 23px; }
+    .btn{ padding: 10px; font-size: 14px; }
 }1.6;
 }
